--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ build_frontend:
   before_script:
     - cd frontend
     - export IMAGE_NAME=$CI_REGISTRY_IMAGE/microservice/frontend
-    - export IMAGE_TAG=1.0 
+    - export IMAGE_TAG=1.0
   only:
     changes:
       - "frontend/**/*" 
@@ -51,20 +51,9 @@ build_products:
     - mac
     - local
   before_script:
-    - chmod 400 $SSH_PRIVATE_KEY
+    - export KUBECONFIG=$K8S_AUTH
   script:
-    - scp -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ./docker-compose.yaml ubuntu@$DEV_SERVER_HOST:/home/ubuntu
-    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$DEV_SERVER_HOST "
-        docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY &&
-
-        export DC_IMAGE_NAME=$IMAGE_NAME && 
-        export DC_IMAGE_TAG=$IMAGE_TAG &&
-
-        docker-compose down &&
-        docker-compose up -d"
-  environment:
-    name: development
-    url: $DEV_ENDPOINT
+    - kubectl get pod -n my-app
 
 
 deploy_frontend:
@@ -84,3 +73,7 @@ deploy_products:
   only:
     changes:
       - "products/**/*"
+
+
+
+
