Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,6 +71,7 @@ deploy_products:
   before_script:
     - export IMAGE_NAME=$CI_REGISTRY_IMAGE/microservice/products
     - export IMAGE_TAG=1.0
+    - export KUBECONFIG=$K8S_AUTH
   only:
     changes:
       - "products/**/*"
