Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,8 +50,9 @@ build_products:
     - monorepo
     - mac
     - local
-  script:
+  before_script:
     - export KUBECONFIG=$K8S_AUTH
+  script:
     - kubectl get pod -n my-app
 
 
