Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,6 +60,7 @@ deploy_frontend:
   before_script:
     - export IMAGE_NAME=$CI_REGISTRY_IMAGE/microservice/frontend
     - export IMAGE_TAG=1.0
+    - cd frontend
   only:
     changes:
       - "frontend/**/*" 
@@ -69,6 +70,7 @@ deploy_products:
   before_script:
     - export IMAGE_NAME=$CI_REGISTRY_IMAGE/microservice/products
     - export IMAGE_TAG=1.0
+    - cd frontend
   only:
     changes:
       - "products/**/*"
