--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,5 +7,8 @@ RUN npm install
 COPY index.html .
 COPY server.js .
 
+ENV PRODUCTS_SERVICE="products"
+ENV SHOPPING_CART_SERVICE="shopping-cart"
+
 EXPOSE 3000
 CMD ["npm", "start"]
