--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,56 +8,41 @@ stages:
   - build
   - deploy
 
-build_frontend:
+.build:
   stage: build
   tags:
     - ec2
     - remote
     - shell
+  variables:
+    MICRO_SERVICE: ""
+    SERVICE_VERSION: ""
   before_script:
-    - cd frontend
-    - export IMAGE_NAME=$CI_REGISTRY_IMAGE/microservice/frontend
-    - export IMAGE_TAG=1.3
+    - cd $MICRO_SERVICE
+    - export IMAGE_NAME=$CI_REGISTRY_IMAGE/microservice/$MICRO_SERVICE
+    - export IMAGE_TAG=$SERVICE_VERSION
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker build -t $IMAGE_NAME:$IMAGE_TAG .
     - docker push $IMAGE_NAME:$IMAGE_TAG
   only:
     changes:
-      - "frontend/**/*"
+      - "$MICRO_SERVICE/**/*"
+
+build_frontend:
+  extends: .build
+  variables:
+    MICRO_SERVICE: frontend
+    SERVICE_VERSION: "1.3"
 
 build_products:
-  stage: build
-  tags:
-    - ec2
-    - remote
-    - shell
-  before_script:
-    - cd products
-    - export IMAGE_NAME=$CI_REGISTRY_IMAGE/microservice/products
-    - export IMAGE_TAG=1.8
-  script:
-    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t $IMAGE_NAME:$IMAGE_TAG .
-    - docker push $IMAGE_NAME:$IMAGE_TAG
-  only:
-    changes:
-      - "products/**/*"
+  extends: .build
+  variables:
+    MICRO_SERVICE: products
+    SERVICE_VERSION: "1.8"
 
 build_shopping_cart:
-  stage: build
-  tags:
-    - ec2
-    - remote
-    - shell
-  before_script:
-    - cd shopping-cart
-    - export IMAGE_NAME=$CI_REGISTRY_IMAGE/microservice/shopping-cart
-    - export IMAGE_TAG=2.1
-  script:
-    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t $IMAGE_NAME:$IMAGE_TAG .
-    - docker push $IMAGE_NAME:$IMAGE_TAG
-  only:
-    changes:
-      - "shopping-cart/**/*"
+  extends: .build
+  variables:
+    MICRO_SERVICE: shopping-cart
+    SERVICE_VERSION: "2.1"
