--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,3 +4,10 @@ services:
     image: ${DC_IMAGE_NAME}:${DC_IMAGE_TAG}
     ports:
       - ${DC_APP_PORT}:${DC_APP_PORT}
+    networks:
+      - micro_service
+
+networks:
+  micro_service:
+    name: micro_service
+    driver: bridge
