--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ workflow:
 
 variables:
   DEPLOYMENT_SERVER_HOST: "13.37.235.23"
-  APP_ENDPOINT: ec2-13-37-235-23.eu-west-3.compute.amazonaws.com
+  APP_ENDPOINT: http://ec2-13-37-235-23.eu-west-3.compute.amazonaws.com:3000
 
 stages:
   - build
