--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "author": "NJ",
     "license": "ISC",
     "dependencies": {
-        "express": "4.17.1"
+        "express": "4.17.1",
+        "node": "^19.3.0"
     }
 }
