--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,10 +5,14 @@ workflow:
     - when: always
 
 
+variables:
+  DEPLOYMENT_SERVER_HOST: "18.206.124.228"
+  APP_ENDPOINT: ec2-18-206-124-228.compute-1.amazonaws.com
+
+
 stages:
   - build
   - deploy
-
 
 
 .build:
@@ -58,3 +62,67 @@ build_shopping_cart:
   only:
     changes:
       - "shopping-cart/**/*"
+
+
+.deploy:
+  stage: deploy
+  tags:
+    - ec2
+    - shell
+    - remote
+  variables:
+    MICRO_SERVICE: ""
+    SERVICE_VERSION: ""
+    APP_PORT: ""
+  before_script:
+    - chmod 400 $SSH_PRIVATE_KEY
+    - export IMAGE_NAME=$CI_REGISTRY_IMAGE/microservice/$MICRO_SERVICE
+    - export IMAGE_TAG=$SERVICE_VERSION
+  script:
+    - scp -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ./docker-compose.yaml ubuntu@$DEPLOYMENT_SERVER_HOST:/home/ubuntu
+    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$DEPLOYMENT_SERVER_HOST "
+      docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY &&
+      
+      export COMPOSE_PROJECT_NAME=$MICRO_SERVICE &&
+      export DC_IMAGE_NAME=$IMAGE_NAME &&
+      export DC_IMAGE_TAG=$IMAGE_TAG &&
+      export DC_APP_PORT=$APP_PORT &&
+      
+      docker-compose down &&
+      docker-compose up -d"
+  environment:
+    name: development
+    url: $APP_ENDPOINT
+
+
+deploy_frontend:
+  extends: .deploy
+  variables:
+    MICRO_SERVICE: frontend
+    SERVICE_VERSION: "1.3"
+    APP_PORT: 3000
+  only:
+    changes:
+      - "frontend/**/*"
+
+
+deploy_products:
+  extends: .deploy
+  variables:
+    MICRO_SERVICE: products
+    SERVICE_VERSION: "1.8"
+    APP_PORT: 3001
+  only:
+    changes:
+      - "products/**/*"
+
+
+deploy_shopping_cart:
+  extends: .deploy
+  variables:
+    MICRO_SERVICE: shopping_cart
+    SERVICE_VERSION: "2.1"
+    APP_PORT: 3002
+  only:
+    changes:
+      - "shopping_cart/**/*"
