--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ workflow:
 
 variables:
   DEPLOYMENT_SERVER_HOST: "174.129.174.241"
-  APP_ENDPOINT: ec2-174-129-174-241.compute-1.amazonaws.com
+  APP_ENDPOINT: ec2-174-129-174-241.compute-1.amazonaws.com:3000
 
 
 stages:
